--- a/styles/first-stylesheet.css
+++ b/styles/first-stylesheet.css
@@ -1,4 +1,7 @@
-* {box-sizing: border-box;}
+* {
+  box-sizing: border-box;
+}
+
 body {
   text-align: center; 
   margin:auto;
@@ -15,11 +18,13 @@ header img{
 }
 
 header nav{
-  margin-top: 5rem;
+  margin-top: 9rem;
 }
+
 p {
   font-family: 'Amatic SC', cursive;
   color:#523128;
+  font-size:2em;
 }
 
 button {
@@ -27,39 +32,86 @@ button {
   width:auto;
 }
 
+a{
+  text-decoration: none;
+  color:#dddcd7;
+  font-family: 'Pacifico', normal;
+}
+
+a::first-letter{
+  font-size: 1.5em;
+}
+
 a:hover {
   color:#7b221f;
 }
 /*you can't have any space between a and : and hover */
+
 nav ul li{
   display: inline;
 }
 
-a{
-  text-decoration: none;
-  color: #5B4D43;
+nav ul li i a{
+  font-family:'Amatic SC', cursive;
+  color:#523128;
+  font-size:2em;
 }
-h1{border-bottom: 2px solid gray;
+h1{
+  border-bottom: 2px solid gray;
   padding-bottom: 1rem;
   border-bottom-left-radius: 40%;
-  border-bottom-right-radius: 40%;}
-a::first-letter{font-size: 1.5em;}
+  border-bottom-right-radius: 40%;
+  color:#523128;
+  font-family:'Cabin Condensed';
+}
+
+h2{
+  margin:0-auto; 
+  color:#523128;
+  font-family:'Cabin Condensed';
+}
+
 article {
   display:inline-block;
-  margin-top: 10rem;
+  width:85%;
+  margin-top: 3rem;
   margin-bottom: 10rem;
   padding:3rem; 
   background-color:#8ba4ac;
 }
-h1{margin:0-auto; color:#523128;}
-h2{margin:0-auto; color:#523128;}
-.pictures {display:inline-block; border-radius: 80%; margin-left:auto; margin-right:auto; width:15rem;}
-footer {border: 2px solid #da7271; background-color:#392f4b; position:fixed; bottom:0; width:100%;}
-footer p{color:#dddcd7;}
+
+.pictures {
+  display:inline-block; 
+  border-radius: 80%; 
+  margin-left:auto; 
+  margin-right:auto; 
+  width:15rem;}
+
+footer {
+  border: 2px solid #da7271; 
+  background-color:#392f4b; 
+  position:fixed; 
+  bottom:0; 
+  width:100%;}
+
+footer p {
+  color:#dddcd7;
+}
+
 footer a {
   color:#dddcd7;
   font-family: 'Pacifico', normal;
 }
-link {color:#8ba4ac}
-article img{width:33%;}
-figcaption {font-size:3em; color:#e45e58}
+link {
+  color:#8ba4ac
+}
+
+article img{
+  width:33%;
+}
+
+.project-one {
+  font-size:2em; 
+  color:#e45e58;
+  font-family: 'Pacifico', normal;
+}
